# AdventOfCode

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt
src/2021/Day1/: solution.py
src/2021/Day10/: day10_solution.py
src/2021/Day11/: day11_solution.py
src/2021/Day12/: day12_solution.py
src/2021/Day13/: day13_solution.py
src/2021/Day14/: day14_solution.py
src/2021/Day15/: day15_solution.py
src/2021/Day16/: day16_sample_input.txt  day16_solution.py
src/2021/Day17/: day17_solution.py
src/2021/Day2/: day2_solution.py
src/2021/Day20/: day20_solution.py
src/2021/Day3/: day3_solution.py
src/2021/Day4/: board_class.py  day4_solution.py
src/2021/Day5/: day5_solution.py
src/2021/Day6/: day6_solution.py
src/2021/Day7/: day7_solution.py
src/2021/Day8/: day8_solution.py  display_class.py
src/2021/Day9/: day9_solution.py
src/2022/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  day9tstinp.txt
src/2023/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day2.py  day3.py  day4.py  day5.py  day5samp.txt  day6.py  day7.py  day8.py  day9.py
src/2024/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/2025/: day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/utils/: __init__.py  config.py  utils.py
