[project]
name = "adventofcode"
dynamic = ["version"]

dependencies = [
  "requests",
  "pandas",
  "pre-commit>=4.0.1",
  "ruff>=0.8.1",
  "numpy>=2.1.3",
  "joblib>=1.4.2",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
ignore = ["ISC001", "ERA001"]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-simplify
    "SIM",
    # eradicate
    "ERA",
]

[tool.uv]
allow-insecure-host = ["files.pythonhosted.org"]
